--- a/BSUIREntrantsWebSite/BSUIREntrantsWebSite/BSUIREntrantsWebSite.csproj
+++ b/BSUIREntrantsWebSite/BSUIREntrantsWebSite/BSUIREntrantsWebSite.csproj
@@ -17,7 +17,7 @@
     <AssemblyName>BSUIREntrantsWebSite</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -236,7 +236,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>64411</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/BSUIREntrantsWebSite</IISUrl>
+          <IISUrl>http://localhost:64411/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
