--- a/BSUIREntrantsWebSite/BSUIREntrantsWebSite/packages.config
+++ b/BSUIREntrantsWebSite/BSUIREntrantsWebSite/packages.config
@@ -3,8 +3,9 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net451" />
-  <package id="jQuery" version="1.10.2" targetFramework="net451" />
+  <package id="jQuery" version="1.12.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
+  <package id="jsTree" version="3.1.1.2" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net451" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.2.0" targetFramework="net451" />
@@ -17,6 +18,7 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net451" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
